Make everything scale correctly on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, body {
+  background-color: var(--theme-background);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
